--- a/V1/team.html
+++ b/V1/team.html
@@ -323,7 +323,7 @@
                                         <img src="./images/esport_left.png" alt="" class="active">
                                         <img src="./images/esport_right.png" alt="" class="img_transform">
                                     </a>
-                                    <a href="##" class="paging_num">1</a>
+                                    <a href="##" class="paging_num active">1</a>
                                     <a href="##" class="esport_more">
                                         <img src="./images/esport_more.png" alt="">
                                     </a>
