--- a/V1/teamdetail.html
+++ b/V1/teamdetail.html
@@ -237,13 +237,115 @@
                                     <div class="w25">
                                         2017.11.11
                                     </div>
-                                    <div class="w25">
+                                    <div class="w25 max_span">
                                         <div class="honor_bottom_img1">
                                             <img class="imgauto" src="./images/champion.png" alt="">
                                         </div>
                                         <span>冠军</span>
                                     </div>
+                                    <div class="w25 max_span">
+                                        <div class="honor_bottom_img2">
+                                            <img class="imgauto" src="./images/kpl_teamdetail.png" alt="">
+                                        </div>
+                                        <span>2017 KPL秋季赛</span>
+                                    </div>
                                     <div class="w25">
+                                        <div class="honor_bottom_img2">
+                                            <img class="imgauto" src="./images/teamdetail1.png" alt="">
+                                        </div>
+                                        <div class="honor_bottom_vs">
+                                            <span class="red span_left">2</span>
+                                            <div class="honor_bottom_img1">
+                                                <img class="imgauto" src="./images/game_detail_vs.png" alt="">
+                                            </div>
+                                            <span class="blue span_right">1</span>
+                                        </div>
+                                        <div class="honor_bottom_img2">
+                                            <img class="imgauto" src="./images/teamdetail2.png" alt="">
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="##" class="clearfix">
+                                    <div class="w25">
+                                        2017.11.12
+                                    </div>
+                                    <div class="w25 max_span">
+                                        <div class="honor_bottom_img1">
+                                            <img class="imgauto" src="./images/second.png" alt="">
+                                        </div>
+                                        <span>冠军</span>
+                                    </div>
+                                    <div class="w25 max_span">
+                                        <div class="honor_bottom_img2">
+                                            <img class="imgauto" src="./images/kpl_teamdetail.png" alt="">
+                                        </div>
+                                        <span>2017 KPL秋季赛</span>
+                                    </div>
+                                    <div class="w25">
+                                        <div class="honor_bottom_img2">
+                                            <img class="imgauto" src="./images/teamdetail1.png" alt="">
+                                        </div>
+                                        <div class="honor_bottom_vs">
+                                            <span class="red span_left">2</span>
+                                            <div class="honor_bottom_img1">
+                                                <img class="imgauto" src="./images/game_detail_vs.png" alt="">
+                                            </div>
+                                            <span class="blue span_right">1</span>
+                                        </div>
+                                        <div class="honor_bottom_img2">
+                                            <img class="imgauto" src="./images/teamdetail2.png" alt="">
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="##" class="clearfix">
+                                    <div class="w25">
+                                        2017.11.13
+                                    </div>
+                                    <div class="w25 max_span">
+                                        <div class="honor_bottom_img1">
+                                            <img class="imgauto" src="./images/third.png" alt="">
+                                        </div>
+                                        <span>冠军</span>
+                                    </div>
+                                    <div class="w25 max_span">
+                                        <div class="honor_bottom_img2">
+                                            <img class="imgauto" src="./images/kpl_teamdetail.png" alt="">
+                                        </div>
+                                        <span>2017 KPL秋季赛</span>
+                                    </div>
+                                    <div class="w25">
+                                        <div class="honor_bottom_img2">
+                                            <img class="imgauto" src="./images/teamdetail1.png" alt="">
+                                        </div>
+                                        <div class="honor_bottom_vs">
+                                            <span class="red span_left">2</span>
+                                            <div class="honor_bottom_img1">
+                                                <img class="imgauto" src="./images/game_detail_vs.png" alt="">
+                                            </div>
+                                            <span class="blue span_right">1</span>
+                                        </div>
+                                        <div class="honor_bottom_img2">
+                                            <img class="imgauto" src="./images/teamdetail2.png" alt="">
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="##" class="clearfix">
+                                    <div class="w25">
+                                        2017.11.14
+                                    </div>
+                                    <div class="w25 max_span">
+                                        <div class="honor_bottom_img1">
+                                            <img class="imgauto" src="./images/fourth.png" alt="">
+                                        </div>
+                                        <span>冠军</span>
+                                    </div>
+                                    <div class="w25 max_span">
                                         <div class="honor_bottom_img2">
                                             <img class="imgauto" src="./images/kpl_teamdetail.png" alt="">
                                         </div>
