赛事赛程日历列表修改

--- a/V1/team.html
+++ b/V1/team.html
@@ -15,7 +15,7 @@
     <!-- 本页新增的css right.css -->
     <link rel="stylesheet" href="./css/right.css">
     <!-- 本页新增的css esports.css -->
-    <link rel="stylesheet" href="./css/esports.css">
+    <link rel="stylesheet" href="./css/team.css">
 </head>
 
 <body>
