--- a/V1/team.html
+++ b/V1/team.html
@@ -1127,7 +1127,7 @@
                                     </a>
                                     <a href="##" class="paging_num">6</a>
                                     <a href="##" class="paging_num">7</a>
-                                    <a href="##" class="paging_num">8</a>
+                                    <a href="##" class="paging_num active">8</a>
                                     <a href="##" class="esport_more">
                                         <img src="./images/esport_more.png" alt="">
                                     </a>
