电竞战队详情页小修改

--- a/V1/teamdetail.html
+++ b/V1/teamdetail.html
@@ -148,6 +148,38 @@
                                 <span class="team_number_name">FoFo</span>
                             </a>
                         </li>
+                        <li>
+                            <a href="##">
+                                <div class="team_number_photo">
+                                    <img src="./images/team_photo1.png" alt="">
+                                </div>
+                                <span class="team_number_name">FoFo</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="##">
+                                <div class="team_number_photo">
+                                    <img src="./images/team_photo1.png" alt="">
+                                </div>
+                                <span class="team_number_name">FoFo</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="##">
+                                <div class="team_number_photo">
+                                    <img src="./images/team_photo1.png" alt="">
+                                </div>
+                                <span class="team_number_name">FoFo</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="##">
+                                <div class="team_number_photo">
+                                    <img src="./images/team_photo1.png" alt="">
+                                </div>
+                                <span class="team_number_name">FoFo</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <!-- 队员介绍 -->
@@ -755,6 +787,16 @@
             </ul>
             <p>Copyright © 2021 www.qilindianjing.com</p>
             <p>网站内容来源于网络，如果侵犯您的权益请联系删除</p>
+        </div>
+    </div>
+    <div class="suspension">
+        <div class="suspension_img">
+            <img src="./images/suspension.png" alt="">
+        </div>
+        <div class="qrcode">
+            <div class="qrcode_img">
+                <img src="./images/qrcode.png" alt="">
+            </div>
         </div>
     </div>
     <script src="./js/jquery.min.js"></script>
