新闻列表页

--- a/V1/news.html
+++ b/V1/news.html
@@ -1016,17 +1016,17 @@
                         </div>
                         <ul class="game_match_detail">
                             <li>
-                                <a href="##" style="background:url('./images/event_1.png')">
+                                <a href="##" style="background-image:url('./images/event_1.png')">
                                     <span>2021 LPL春季赛</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="##" style="background:url('./images/event_1.png')">
+                                <a href="##" style="background-image:url('./images/event_1.png')">
                                     <span>2021 LPL春季赛</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="##" style="background:url('./images/event_1.png')">
+                                <a href="##" style="background-image:url('./images/banner.png')">
                                     <span>2021 LPL春季赛</span>
                                 </a>
                             </li>
