赛事专题列表页

--- a/V1/teamdetail.html
+++ b/V1/teamdetail.html
@@ -198,7 +198,7 @@
                     <div class="team_data_items clearfix">
                         <div class="data_left fl">
                             <div class="circle_left clearfix">
-                                <div class="won_all third circle fl" data-num="0.75">
+                                <div class="won_all third circle fl" data-num="0.75445">
                                     <strong></strong>
                                 </div>
                                 <div class="circle_right fl">
@@ -807,6 +807,7 @@
     <script>
 
     var value = $('.won_all').data('num');
+    console.log(value)
     $('.won_all.circle').circleProgress({
         value: value,
         size:208,
@@ -814,7 +815,7 @@
         fill: { gradient:['#FF6649'] },
         startAngle: -Math.PI / 4 * 2,
     }).on('circle-animation-progress', function(event, progress, stepValue) {
-        $(this).find('strong').html(parseInt(100 * stepValue) + '<i>%</i><span>胜率</span>');
+        $(this).find('strong').html(Math.round(stepValue*100*100)/100 + '<i>%</i><span>胜率</span>');
     });
 
     var value_red = $('.won_red').data('num');
