--- a/V1/events.html
+++ b/V1/events.html
@@ -7,13 +7,14 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
-    <title>赛事赛程</title>
+    <title>赛事专题</title>
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/reset.css">
     <script src="./js/flexible.js"></script>
     <link rel="stylesheet" href="./css/headerfooter.css">
     <!-- 本页新增的css right.css -->
     <link rel="stylesheet" href="./css/right.css">
+     <!-- 本页新增的css events.css -->
     <link rel="stylesheet" href="./css/events.css">
 </head>
 
@@ -404,6 +405,16 @@
             </ul>
             <p>Copyright © 2021 www.qilindianjing.com</p>
             <p>网站内容来源于网络，如果侵犯您的权益请联系删除</p>
+        </div>
+    </div>
+    <div class="suspension">
+        <div class="suspension_img">
+            <img src="./images/suspension.png" alt="">
+        </div>
+        <div class="qrcode">
+            <div class="qrcode_img">
+                <img src="./images/qrcode.png" alt="">
+            </div>
         </div>
     </div>
     <script src="./js/jquery.min.js"></script>
