--- a/V1/teamdetail.html
+++ b/V1/teamdetail.html
@@ -730,7 +730,7 @@
                 <div class="hot_match mb20">
                     <div class="team_pub_top clearfix">
                         <div class="team_pub_img fl">
-                            <img class="imgauto" src="./images/hots.png" alt="">
+                            <img class="imgauto" src="./images/events.png" alt="">
                         </div>
                         <span class="fl team_pbu_name">热门赛事</span>
                         <a href="##" class="team_pub_more fr">
