--- a/V1/404.html
+++ b/V1/404.html
@@ -53,7 +53,9 @@
                 </div>
                 <div class="div404">
                     <span class="not_find">啊，页面找不到了&nbsp;&nbsp;>_<</span>
-                    <span class="return">返回首页</span>
+                    <span class="return">
+                        <a href="##">返回首页</a>
+                    </span>
                 </div>
             </div>
         </div>
