--- a/V1/teamdetail.html
+++ b/V1/teamdetail.html
@@ -827,7 +827,7 @@
         fill: { color: '#FF5C6A' }
     });
 
-    var value_blue = $('.won_red').data('num');
+    var value_blue = $('.won_blue').data('num');
     $('.won_blue.circle').circleProgress({
         startAngle: -Math.PI / 4 * 2,
         size:94,
