修复了电竞选手中战队介绍的别称溢出隐藏

--- a/V1/playerdetail.html
+++ b/V1/playerdetail.html
@@ -95,8 +95,7 @@
                     </div>
                     <div class="player_data_detail clearfix">
                         <div class="radar fl">
-                            <div id="chart" style="height: 280px;width: 240px" data-kill='30' data-assists="20"
-                                data-existence="50" data-rate='40' data-economy='80' data-view='10'></div>
+                            <div id="chart" style="height: 280px;width: 240px"></div>
                         </div>
                         <div class="player_data_content fr">
                             <div class="player_data_top clearfix">
@@ -111,7 +110,7 @@
                                         </div>
                                     </div>
                                     <div class="part_rate">
-                                        <div class="part_rate1 circle" data-num="0.2">
+                                        <div class="part_rate1 circle" data-num="0.88">
                                         </div>
                                         <div class="blue_explain">
                                             <span class="rate_number">66.7%</span>
@@ -608,8 +607,8 @@
                                     <p class="name fl">WEWEWEWEWE</p>
                                     <p class="classify fl">英雄联盟</p>
                                 </div>
-                                <p class="name">英文名：<span>Team VS</span></p>
-                                <p class="name">别&nbsp;&nbsp;&nbsp;称：<span>vvvvVS</span></p>
+                                <p class="name">英文名：<span>Team VSvvvvVSvvvvVSvvvvVSvvvvVS</span></p>
+                                <p class="name">别&nbsp;&nbsp;&nbsp;称：<span>vvvvVSvvvvVSvvvvVSvvvvVSvvvvVS</span></p>
                             </div>
                         </div>
                         <div class="player_team_word">
@@ -960,7 +959,7 @@
                 array[i].index=i;
             }
 
-        var value = [array[0].empno, array[1].empno, array[2].empno, array[3].empno ,array[4].empno ,array[5].empno, ];
+        var value = [array[0].empno, array[1].empno, array[2].empno, array[3].empno ,array[4].empno ,array[5].empno ];
         var option = {
             // tooltip: {},
             radar: {
