修改资讯详情图片宽带超过规定的长度

--- a/V1/懒加载.html
+++ b/V1/懒加载.html
@@ -1363,7 +1363,7 @@
                     <li class="col-md-3 col-xs-6">
                         <a href="##">
                             <div class="div_img">
-                                <img data-original ="./images/banner.png" alt="">
+                                <img data-original ="./images/banner.png" src="" alt="">
                                 <span>2021 LPL春季赛</span>
                             </div>
                         </a>
